TestRepo2/src/objects/Account_Member__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Accounts and Users (Shoppers)</description>
    <fields>
        <fullName>AccountTeamId__c</fullName>
        <label>AccountTeamId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Members</relationshipLabel>
        <relationshipName>Account_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Members_with_Account_Name</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>Members with Account Name</label>
    </listViews>
    <nameField>
        <displayFormat>ACM-{000000}</displayFormat>
        <label>Account Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>